# rust-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: handler.rs  main.rs  model.rs
